--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/is-prop-valid": "^1.2.1",
     "@next/eslint-plugin-next": "^13.4.19",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
@@ -18,6 +19,7 @@
     "lucide-react": "^0.279.0",
     "next": "13.4.19",
     "react": "18.2.0",
+    "react-detect-click-outside": "^1.1.7",
     "react-dom": "18.2.0",
     "styled-components": "^6.0.8",
     "typescript": "5.2.2"
