--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/is-prop-valid": "^1.2.1",
     "@next/eslint-plugin-next": "^13.4.19",
+    "@react-hook/window-size": "^3.1.1",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
