--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "lucide-react": "^0.279.0",
-    "next": "13.4.19",
+    "next": "^13.5.4",
     "react": "18.2.0",
     "react-detect-click-outside": "^1.1.7",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.3",
     "styled-components": "^6.0.8",
     "typescript": "5.2.2"
   },
