--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emotion/is-prop-valid": "^1.2.1",
+    "@hookform/resolvers": "^3.3.2",
     "@next/eslint-plugin-next": "^13.4.19",
     "@react-hook/window-size": "^3.1.1",
     "@types/node": "20.6.0",
@@ -23,9 +24,11 @@
     "react": "18.2.0",
     "react-detect-click-outside": "^1.1.7",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-toastify": "^9.1.3",
     "styled-components": "^6.0.8",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.7.0",
