--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "axios": "^1.5.1",
+    "cpf-cnpj-validator": "^1.0.3",
+    "email-validator": "^2.0.4",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "lucide-react": "^0.279.0",
