--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "email-validator": "^2.0.4",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "jwt-decode": "^3.1.2",
     "lucide-react": "^0.279.0",
     "next": "^13.5.4",
     "react": "18.2.0",
