--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "email-validator": "^2.0.4",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
     "lucide-react": "^0.279.0",
     "next": "^13.5.4",
@@ -34,6 +35,7 @@
     "yup": "^1.3.2"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.4",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
     "eslint-config-prettier": "^9.0.0",
