--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,7 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["unused-imports"],
+  "plugins": ["unused-imports", "react-hooks"],
   "rules": {
     "@typescript-eslint/no-unused-vars": "warn",
     "@typescript-eslint/no-explicit-any": "error",
@@ -28,6 +28,7 @@
     "quotes": ["error", "double"],
     "semi": ["error", "always"],
     "max-len": "warn",
-    "unused-imports/no-unused-imports": "warn"
+    "unused-imports/no-unused-imports": "warn",
+    "react-hooks/exhaustive-deps": "off"
   }
 }
